test/successor_ml/should_not_compile/record2.sml
val x = {};
val _ = { a = "A", ... = x } : { a : string, b : int };
